--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body class="bg-gradient-to-r from-cyan-500 to-blue-500 min-h-screen flex items-center justify-center font-sans py-10">
 
     <div class="bg-white p-8 rounded-lg shadow-2xl w-full max-w-md">
-        <h1 class="text-3xl font-bold text-slate-800 mb-6 text-center">📦 Inventario Pro</h1>
+        <h1 class="text-3xl font-bold text-slate-800 mb-6 text-center">📦 Inventario V2</h1>
 
         <div class="mb-6 bg-slate-50 p-5 rounded-lg border border-slate-200 shadow-inner">
             <h2 class="text-xs font-bold text-slate-500 mb-3 uppercase tracking-wide">Gestionar Producto</h2>
