--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <script>
-        const API_URL = '/productos';
+        const API_URL = '/api/productos';
         let idEditando = null;
         let paginaActual = 1;
 
